--- a/comicagg/locale/es/LC_MESSAGES/django.po
+++ b/comicagg/locale/es/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: django\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-02-10 13:28+0100\n"
-"PO-Revision-Date: 2010-02-10 13:34+0100\n"
+"PO-Revision-Date: 2010-02-10 17:35+0100\n"
 "Last-Translator: \n"
 "Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -1638,7 +1638,7 @@ msgstr "como está guardado"
 
 #: templates/v2010/agregator/organize_add.html:36
 msgid "New comic!"
-msgstr "¡Comics nuevo!"
+msgstr "¡Nuevo!"
 
 #: templates/v2010/agregator/organize_add.html:37
 msgid "Score"
