--- a/comicagg/locale/es/LC_MESSAGES/django.po
+++ b/comicagg/locale/es/LC_MESSAGES/django.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: django\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-02-10 13:28+0100\n"
-"PO-Revision-Date: 2010-02-10 17:35+0100\n"
+"POT-Creation-Date: 2010-03-23 17:00+0100\n"
+"PO-Revision-Date: 2010-03-23 17:06+0100\n"
 "Last-Translator: \n"
 "Language-Team: Spanish <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -21,11 +21,11 @@ msgstr ""
 "X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: accounts/models.py:32
+#: accounts/models.py:33
 msgid "User profile"
 msgstr "Perfil de usuario"
 
-#: accounts/models.py:33
+#: accounts/models.py:34
 msgid "User profiles"
 msgstr "Perfiles de usuario"
 
@@ -67,15 +67,15 @@ msgstr ""
 msgid "Password reset on %s"
 msgstr "Cambio de contraseña en %s"
 
-#: agregator/views.py:193 agregator/views.py:222
+#: agregator/views.py:191 agregator/views.py:218
 msgid "Saved =)"
 msgstr "Guardado =)"
 
-#: agregator/views.py:333 templates/admin/index.html:46
+#: agregator/views.py:328 templates/admin/index.html:46
 msgid "Update comic"
 msgstr "Actualizar comic"
 
-#: agregator/views.py:598
+#: agregator/views.py:606
 #, python-format
 msgid "Invalid distribution algorithm specified: %s."
 msgstr "Algoritmo de distribución inválido: %s."
@@ -630,7 +630,7 @@ msgid "More"
 msgstr "Más"
 
 #: templates/base/agregator/read.html:60
-#: templates/v2010/agregator/read.html:71
+#: templates/v2010/agregator/read.html:79
 msgid "Report broken image"
 msgstr "Avisar imagen rota"
 
@@ -639,7 +639,7 @@ msgid "Go up"
 msgstr "Subir"
 
 #: templates/base/agregator/read.html:67
-#: templates/v2010/agregator/read.html:65
+#: templates/v2010/agregator/read.html:73
 msgid "Mark as read"
 msgstr "Marcar como leída"
 
@@ -798,8 +798,8 @@ msgstr "Tus etiquetas: "
 
 #: templates/base/agregator/tagging_form.html:5
 #: templates/base/registration/account.html:27
-#: templates/v2010/agregator/organize.html:59
-#: templates/v2010/agregator/organize_organize.html:33
+#: templates/v2010/agregator/organize_add.html:54
+#: templates/v2010/agregator/organize_organize.html:34
 #: templates/v2010/registration/account.html:27
 msgid "Save"
 msgstr "Guardar"
@@ -1549,20 +1549,12 @@ msgid ""
 msgstr "Tu cuenta ha sido creada. Ahora puedes conectarte con ese usuario."
 
 #: templates/v2010/base.html:45
-msgid "profile"
-msgstr "perfil"
-
-#: templates/v2010/base.html:45
-msgid "help"
-msgstr "ayuda"
-
-#: templates/v2010/base.html:45
 msgid "news"
 msgstr "noticias"
 
 #: templates/v2010/base.html:45
 msgid "admin"
-msgstr ""
+msgstr "admin"
 
 #: templates/v2010/base.html:45
 msgid "logout"
@@ -1573,68 +1565,17 @@ msgid "read"
 msgstr "lee"
 
 #: templates/v2010/base.html:48
-msgid "organize"
-msgstr "organiza"
+msgid "comics"
+msgstr "comics"
 
 #: templates/v2010/base.html:48
 msgid "request"
 msgstr "solicita"
 
-#: templates/v2010/base.html:48
-msgid "list"
-msgstr "lista"
-
-#: templates/v2010/agregator/organize.html:3
-#: templates/v2010/agregator/organize.html:52
-#: templates/v2010/agregator/organize_organize.html:3
-#: templates/v2010/agregator/organize_organize.html:26
-msgid "Organize your comics"
-msgstr "Organiza tus comics"
-
-#: templates/v2010/agregator/organize.html:34
 #: templates/v2010/agregator/organize_add.html:3
-#: templates/v2010/agregator/organize_add.html:31
+#: templates/v2010/agregator/organize_add.html:32
 msgid "Add comics"
 msgstr "Añadir comics"
-
-#: templates/v2010/agregator/organize.html:54
-#: templates/v2010/agregator/organize_organize.html:28
-msgid "Drop comics here<br/>to delete them"
-msgstr "Suelta comics aquí<br/>para borrarlos"
-
-#: templates/v2010/agregator/organize.html:56
-#: templates/v2010/agregator/organize_organize.html:30
-msgid ""
-"Here you can sort your comics. Just select one or some of them (holding the "
-"Ctrl/Meta key) and drag them around."
-msgstr ""
-"Aquí puedes organizar tus comics. Selecciona uno o varios (pulsando la tecla "
-"Ctrl/Meta) y múevelos."
-
-#: templates/v2010/agregator/organize.html:63
-#: templates/v2010/agregator/organize_organize.html:37
-msgid "Saving..."
-msgstr "Guardando..."
-
-#: templates/v2010/agregator/organize.html:69
-#: templates/v2010/agregator/organize_organize.html:43
-msgid "Sort them:"
-msgstr "Ordenar por:"
-
-#: templates/v2010/agregator/organize.html:70
-#: templates/v2010/agregator/organize_organize.html:44
-msgid "by name"
-msgstr "por nombre"
-
-#: templates/v2010/agregator/organize.html:71
-#: templates/v2010/agregator/organize_organize.html:45
-msgid "by score"
-msgstr "por puntuación"
-
-#: templates/v2010/agregator/organize.html:72
-#: templates/v2010/agregator/organize_organize.html:46
-msgid "how it was saved"
-msgstr "como está guardado"
 
 #: templates/v2010/agregator/organize_add.html:36
 msgid "New comic!"
@@ -1649,18 +1590,70 @@ msgid "votes"
 msgstr "votos"
 
 #: templates/v2010/agregator/organize_add.html:38
-msgid ""
-"<b>Warning!</b> Instead of showing the images of this comic, you will see a "
-"link to its website when the comic updates."
-msgstr ""
+msgid "Readers"
+msgstr "Lectores"
 
 #: templates/v2010/agregator/organize_add.html:39
 msgid "Link to its website"
 msgstr "Enlace a su web"
 
-#: templates/v2010/agregator/organize_add.html:47
+#: templates/v2010/agregator/organize_add.html:40
+msgid "Last update:"
+msgstr "Última actualización:"
+
+#: templates/v2010/agregator/organize_add.html:45
+msgid ""
+"<b>Warning!</b> Instead of showing the images of this comic, you will see a "
+"link to its website when the comic updates."
+msgstr ""
+"<b>¡Atención!</b> En vez de mostrar las imágenes de este comic, verás un en "
+"lace a su página web cuando se actualice."
+
+#: templates/v2010/agregator/organize_add.html:49
+msgid "Hover over a comic to see details."
+msgstr "Pasa por encima de un comic para ver detalles."
+
+#: templates/v2010/agregator/organize_add.html:58
+#: templates/v2010/agregator/organize_organize.html:38
+msgid "Saving..."
+msgstr "Guardando..."
+
+#: templates/v2010/agregator/organize_add.html:66
 msgid "You won't see the images of this comic"
 msgstr "No verás las imágenes de este comic."
+
+#: templates/v2010/agregator/organize_organize.html:3
+#: templates/v2010/agregator/organize_organize.html:27
+msgid "Organize your comics"
+msgstr "Organiza tus comics"
+
+#: templates/v2010/agregator/organize_organize.html:29
+msgid "Drop comics here<br/>to delete them"
+msgstr "Suelta comics aquí<br/>para borrarlos"
+
+#: templates/v2010/agregator/organize_organize.html:31
+msgid ""
+"Here you can sort your comics. Just select one or some of them (holding the "
+"Ctrl/Meta key) and drag them around."
+msgstr ""
+"Aquí puedes organizar tus comics. Selecciona uno o varios (pulsando la tecla "
+"Ctrl/Meta) y múevelos."
+
+#: templates/v2010/agregator/organize_organize.html:44
+msgid "Sort them:"
+msgstr "Ordenar por:"
+
+#: templates/v2010/agregator/organize_organize.html:45
+msgid "by name"
+msgstr "por nombre"
+
+#: templates/v2010/agregator/organize_organize.html:46
+msgid "by score"
+msgstr "por puntuación"
+
+#: templates/v2010/agregator/organize_organize.html:47
+msgid "how it was saved"
+msgstr "como está guardado"
 
 #: templates/v2010/agregator/read.html:35
 #, fuzzy
@@ -1675,19 +1668,20 @@ msgstr "Estos son todos los comics que tenemos"
 #: templates/v2010/agregator/read.html:39
 #, python-format
 msgid ""
-"You are reading <b id=\"totalComicCounter\">%(len)s</b> comics and <b id="
-"\"infoUnreadCounter\">%(unr)s</b> of them have unread strips."
+"You are reading <b id=\"unreadCountersTotal\">%(len)s</b> comics and <b id="
+"\"unreadCountersUnread\">%(unr)s</b> of them have unread strips."
 msgstr ""
-"Estás leyendo <b id=\"totalComicCounter\">%(len)s</b> comics y <b id="
-"\"infoUnreadCounter\">%(unr)s</b> de ellos tienen nuevas tiras sin leer."
+"Estás leyendo <b id=\"unreadCountersTotal\">%(len)s</b> comics y <b id="
+"\"unreadCountersUnread\">%(unr)s</b> de ellos tienen nuevas tiras sin leer."
 
 #: templates/v2010/agregator/read.html:40
 #, python-format
 msgid ""
-"You are reading <b id=\"totalComicCounter2\">%(len)s</b> comics and none of "
-"them have unread strips."
+"You are reading <b id=\"noUnreadCountersTotal\">%(len)s</b> comics and none "
+"of them have unread strips."
 msgstr ""
-"Estás leyendo <b id=\"totalComicCounter\">%(len)s</b> comics y ninguno de "
+"Estás leyendo <b id=\"noUnreadCountersTotal\">%(len)s</b> comics y ninguno "
+"de "
 "ellos tienen nuevas tiras sin leer."
 
 #: templates/v2010/agregator/read.html:41
@@ -1706,28 +1700,50 @@ msgstr ""
 "Mostrando <b>todos</b> los comics. <a href=\"#\" onclick=\"showUnreadComics()"
 "\">Pulsa aquí</a> para ver sólo los que tienes sin leer."
 
-#: templates/v2010/agregator/read.html:47
+#: templates/v2010/agregator/read.html:48
 msgid "New strips!"
 msgstr "¡Nuevas tiras!"
 
-#: templates/v2010/agregator/read.html:50
+#: templates/v2010/agregator/read.html:51
 #, python-format
 msgid ""
 "The comic has been updated. <a href=\"%(url)s\">Click here</a> to go to the "
 "comic's website."
 msgstr ""
+"El cómic ha sido actualizado. <a href=\"%(url)s\">Haz click aquí</a> para ir "
+"a la página del comic."
 
-#: templates/v2010/agregator/read.html:62
+#: templates/v2010/agregator/read.html:70
 msgid "Reload images"
 msgstr "Recargar"
 
-#: templates/v2010/agregator/read.html:66
+#: templates/v2010/agregator/read.html:74
 msgid "Vote"
 msgstr "Vota"
 
-#: templates/v2010/agregator/read.html:72
-msgid "More options"
-msgstr "Más acciones"
+#: templates/v2010/agregator/read.html:80
+msgid "Remove this comic"
+msgstr "Quitar este comic"
+
+#: templates/v2010/agregator/read.html:87
+msgid "You haven't selected any comics!"
+msgstr "¡No has seleccionado ningún comic!"
+
+#: templates/v2010/registration/activate.html:3
+msgid "Activate account"
+msgstr "Activar cuenta"
+
+#: templates/v2010/registration/activate.html:8
+msgid ""
+"Your account was inactivated because you didn't read your comics for 45 "
+"days. You can reactivate it here."
+msgstr ""
+"Tu cuenta ha sido desactivada porque no has leído tus comics en 45 días. La "
+"puedes reactivar aquí."
+
+#: templates/v2010/registration/activate.html:11
+msgid "Reactivate"
+msgstr "Reactivar"
 
 #: templates/v2010/registration/login_form.html:7
 msgid ""
@@ -1784,6 +1800,21 @@ msgstr "Otra vez"
 #: templates/v2010/registration/register_done.html:7
 msgid "Back to login"
 msgstr "Volver al inicio"
+
+#~ msgid "profile"
+#~ msgstr "perfil"
+
+#~ msgid "help"
+#~ msgstr "ayuda"
+
+#~ msgid "organize"
+#~ msgstr "organiza"
+
+#~ msgid "list"
+#~ msgstr "lista"
+
+#~ msgid "More options"
+#~ msgstr "Más acciones"
 
 #, fuzzy
 #~ msgid "votos"
